data/derived/fa15/progs/unify/prog0568.ml.out
Characters 512-513:
  let d = (eval(n, x, y)) in if not(d = 1) then log (eval(n, x, y)) else log(1.0);;
                                        ^
Error: This expression has type int but an expression was expected of type
         float
